added service exit if terminated updated ResourcesHelper valid and invalid params tests

--- a/resources/rpi_critical_temperature_service.properties
+++ b/resources/rpi_critical_temperature_service.properties
@@ -10,3 +10,6 @@ rpi.throttle.shutdown=true
 ! If no value provided it will be set to 15s
 rpi.check.temp.interval.s=10
 
+! Should service exit if execution is considered terminated
+service.exit.if.terminated=false
+
